feature(signup): create signup page
- create a link to register in UI/html/index.html
- create UI/html/register.html for signup
- create UI/css/register.css for styling register

[Finishes #168373332]

--- a/UI/html/index.html
+++ b/UI/html/index.html
@@ -8,6 +8,20 @@
   <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-  
+  <header class="landing-header"></header>
+  <main class="landing-main flex">
+    <section class="intro flex">
+      <h1 class="intro--title">Teamwork</h1>
+      <p class="intro--body">
+        Teamwork is an ​ internal social network for organization's employees.
+        The goal of this application is to facilitate more interaction
+        between colleagues and facilitate team bonding
+      </p>
+    </section>
+    <section class="register flex">
+      <a href="./register.html" class="register--link">REGISTER</a>
+    </section>
+  </main>
+  <footer class="landing-footer"></footer>
 </body>
 </html>
