feature(write-share): add write and share article section
- allow employee to write and/or share article
- add a My articles tab in UI/html/home.html
- add UI/html/home.html which is home page for employee

[Finishes #168373888]

--- a/UI/html/register.html
+++ b/UI/html/register.html
@@ -18,7 +18,7 @@
       <div class="register--signup flex ">
         <div class="signup-container flex">
           <h3 class="create-account">Create Teamwork Account</h3>
-          <form action="" class="form">
+          <form action="./home.html" class="form">
             <div class="flex form-element email-container">
               <p>Email:</p>
               <input type="email" class="form--input" placeholder="Email" required>
@@ -45,7 +45,7 @@
       <div class="register--signin hidden">
         <div class="signin-container flex">
           <h3 class="account-signin">Sign In to your Teamwork Account</h3>
-          <form action="" class="form">
+          <form action="./home.html" class="form">
             <div class="flex form-element email-container">
               <p>Email:</p>
               <input type="email" class="form--input" placeholder="Email" required>
