--- a/UI/html/home.html
+++ b/UI/html/home.html
@@ -25,7 +25,7 @@
           <h4>Write and share your article</h4>
           <textarea name="" id="" cols="40" rows="20"></textarea>
           <div class="choose-category flex">
-            <p>Choose a category:</p>
+            <p>Category:</p>
             <input type="text" list="categories">
             <datalist name="" id="categories">
               <option value="Nature"></option>
@@ -40,10 +40,186 @@
           </div>
         </div>
       </div>
-      <div class="my-articles-container"></div>
+      <div class="my-articles-container flex">
+        <section class="articles flex">
+          <h2 class="articles-title">My articles:</h2>
+          <article class="article flex">
+            <div class="article-content">
+              <div class="author-box">
+                <img src="../images/man.png" width="60px" height="60px" class="author-avatar" alt="author">
+                <p class="author">Elvis Iraguha</p>
+                <time>30 minutes ago</time>
+              </div>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae ullam nostrum quo, quaerat illum, aspernatur nihil, soluta id saepe eum dicta sit nulla rem cumque quas repellat velit consequuntur expedita!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas vitae laboriosam perspiciatis vero rerum aperiam corrupti cupiditate dolore deserunt omnis quaerat debitis in quasi accusamus, at, ullam dolorem fugit eveniet!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo atque provident facere quam dolore quisquam cum saepe natus magnam earum ratione est quos at aliquid, esse neque dignissimos, odio culpa.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed quibusdam dignissimos corporis quasi ut, dolorem accusamus perferendis architecto distinctio repellendus deleniti autem officia quod a dolorum. Aspernatur nemo reiciendis minima?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, vitae doloremque officiis enim quasi magni, modi, quo quaerat fuga expedita saepe asperiores cumque nobis exercitationem perferendis vero atque distinctio eum.
+              </p>
+              <div class="article-controls flex">
+                <figure title="Edit article" class="edit-article">
+                  <img src="../images/edit.png" width="40" height="40" alt="edit article">
+                  <figcaption class="figcaption">Edit</figcaption>
+                </figure>
+              </div>
+            </div>
+            <div class="article-comments">
+              <h4 class="comments-title">Comments:</h4>
+              <div class="comment flex">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit
+                </p>
+                <div class="comment-author-box">
+                    <img src="../images/girl.png" width="40" height="40" class="author-avatar" alt="author">
+                    <p class="comment-author">Alice Bob</p>
+                </div>
+              </div>
+              <div class="comment flex">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit
+                </p>
+                <div class="comment-author-box">
+                    <img src="../images/man.png" width="40" height="40" class="author-avatar" alt="author">
+                    <p class="comment-author">John Doe</p>
+                </div>
+              </div>
+              <div class="comment flex">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit
+                </p>
+                <div class="comment-author-box">
+                    <img src="../images/girl.png" width="40" height="40" class="author-avatar" alt="author">
+                    <p class="comment-author">Bob Alice</p>
+                </div>
+              </div>
+            </div>
+          </article>
+          <article class="article flex">
+            <div class="article-content">
+              <div class="author-box">
+                <img src="../images/girl.png" width="60px" height="60px" class="author-avatar" alt="author">
+                <p class="author">Alice Bob</p>
+                <time>40 minutes ago</time>
+              </div>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae ullam nostrum quo, quaerat illum, aspernatur nihil, soluta id saepe eum dicta sit nulla rem cumque quas repellat velit consequuntur expedita!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas vitae laboriosam perspiciatis vero rerum aperiam corrupti cupiditate dolore deserunt omnis quaerat debitis in quasi accusamus, at, ullam dolorem fugit eveniet!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo atque provident facere quam dolore quisquam cum saepe natus magnam earum ratione est quos at aliquid, esse neque dignissimos, odio culpa.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed quibusdam dignissimos corporis quasi ut, dolorem accusamus perferendis architecto distinctio repellendus deleniti autem officia quod a dolorum. Aspernatur nemo reiciendis minima?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, vitae doloremque officiis enim quasi magni, modi, quo quaerat fuga expedita saepe asperiores cumque nobis exercitationem perferendis vero atque distinctio eum.
+              </p>
+              <div class="article-controls flex">
+                  <figure title="Edit article" class="edit-article">
+                    <img src="../images/edit.png" width="40" height="40" alt="edit article">
+                    <figcaption class="figcaption">Edit</figcaption>
+                  </figure>
+              </div>
+            </div>
+            <div class="article-comments">
+              <h4 class="comments-title">Comments:</h4>
+              <div class="comment flex">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit
+                </p>
+                <div class="comment-author-box">
+                    <img src="../images/girl.png" width="40" height="40" class="author-avatar" alt="author">
+                    <p class="comment-author">Alice Bob</p>
+                </div>
+              </div>
+              <div class="comment flex">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit
+                </p>
+                <div class="comment-author-box">
+                    <img src="../images/man.png" width="40" height="40" class="author-avatar" alt="author">
+                    <p class="comment-author">John Doe</p>
+                </div>
+              </div>
+              <div class="comment flex">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit
+                </p>
+                <div class="comment-author-box">
+                    <img src="../images/girl.png" width="40" height="40" class="author-avatar" alt="author">
+                    <p class="comment-author">Bob Alice</p>
+                </div>
+              </div>
+            </div>
+          </article>
+          <article class="article flex">
+            <div class="article-content">
+              <div class="author-box">
+                <img src="../images/man.png" width="60px" height="60px" class="author-avatar" alt="author">
+                <p class="author">John Doe</p>
+                <time>50 minutes ago</time>
+              </div>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae ullam nostrum quo, quaerat illum, aspernatur nihil, soluta id saepe eum dicta sit nulla rem cumque quas repellat velit consequuntur expedita!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas vitae laboriosam perspiciatis vero rerum aperiam corrupti cupiditate dolore deserunt omnis quaerat debitis in quasi accusamus, at, ullam dolorem fugit eveniet!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo atque provident facere quam dolore quisquam cum saepe natus magnam earum ratione est quos at aliquid, esse neque dignissimos, odio culpa.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed quibusdam dignissimos corporis quasi ut, dolorem accusamus perferendis architecto distinctio repellendus deleniti autem officia quod a dolorum. Aspernatur nemo reiciendis minima?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, vitae doloremque officiis enim quasi magni, modi, quo quaerat fuga expedita saepe asperiores cumque nobis exercitationem perferendis vero atque distinctio eum.
+              </p>
+              <div class="article-controls flex">
+                <figure title="Edit article" class="edit-article">
+                  <img src="../images/edit.png" width="40" height="40" alt="edit article">
+                  <figcaption class="figcaption">Edit</figcaption>
+                </figure>
+              </div>
+            </div>
+            <div class="article-comments">
+              <h4 class="comments-title">Comments:</h4>
+              <div class="comment flex">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit
+                </p>
+                <div class="comment-author-box">
+                    <img src="../images/girl.png" width="40" height="40" class="author-avatar" alt="author">
+                    <p class="comment-author">Alice Bob</p>
+                </div>
+              </div>
+              <div class="comment flex">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit
+                </p>
+                <div class="comment-author-box">
+                    <img src="../images/man.png" width="40" height="40" class="author-avatar" alt="author">
+                    <p class="comment-author">John Doe</p>
+                </div>
+              </div>
+              <div class="comment flex">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit
+                </p>
+                <div class="comment-author-box">
+                    <img src="../images/girl.png" width="40" height="40" class="author-avatar" alt="author">
+                    <p class="comment-author">Bob Alice</p>
+                </div>
+              </div>
+            </div>
+          </article>
+        </section>
+      </div>
     </section>
     <section class="other-articles hidden"></section>
+    <section class="modal hidden">
+      <div class="modal-content">
+        <textarea cols="80" rows="12" class="modal-textarea">
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem possimus labore modi aspernatur porro magnam! Similique ducimus exercitationem odio iure aliquam quas beatae, incidunt itaque, accusantium tempore, in numquam qui.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem possimus labore modi aspernatur porro magnam! Similique ducimus exercitationem odio iure aliquam quas beatae, incidunt itaque, accusantium tempore, in numquam qui.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem possimus labore modi aspernatur porro magnam! Similique ducimus exercitationem odio iure aliquam quas beatae, incidunt itaque, accusantium tempore, in numquam qui.
+        </textarea>
+        <div class="action-btns flex">
+            <button class="write-btn btn-cancel btn-close-modal">Cancel</button>
+            <button class="write-btn btn-update">Update</button>
+        </div>
+      </div>
+    </section>
   </main>
-  <footer class="footer-main"></footer>
+  <footer class="footer-home">
+    &copy; Teamwork 2019
+  </footer>
+  <script src="../script/home.js"></script>
 </body>
 </html>
