feature(comments): enable comments
- create a comment icon on all articles
- update the modal to show a comment textarea

[Finishes #168374811]

--- a/UI/html/home.html
+++ b/UI/html/home.html
@@ -467,6 +467,14 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem possimus lab
             <button class="action-btn btn-delete btn-close-modal">Delete</button>
           </div>
         </div>
+        <div class="modal-comment hidden">
+          <p>Write your comment in the box below</p>
+          <textarea cols="30" rows="10" class="modal-textarea"></textarea>
+          <div class="action-btns flex">
+            <button class="action-btn btn-cancel btn-close-modal">Cancel</button>
+            <button class="action-btn btn-comment btn-close-modal">Comment</button>
+          </div>
+        </div>
       </div>
     </section>
   </main>
