responsive for landing page

--- a/UI/html/index.html
+++ b/UI/html/index.html
@@ -22,6 +22,8 @@
       <a href="./register.html" class="register--link">REGISTER</a>
     </section>
   </main>
-  <footer class="landing-footer"></footer>
+  <footer class="landing-footer flex">
+    &copy; Teamwork 2019
+  </footer>
 </body>
 </html>
