feature(ui): correct user interface
- use only two fonts
- constistent in colors

[Finishes #168474589]

--- a/UI/html/admin.html
+++ b/UI/html/admin.html
@@ -12,7 +12,7 @@
 <body>
   <header class="home-header flex">
     <div class="header-top flex">
-      <h1 class="header__title">Teamwork</h1>
+      <h1 class="header__title title">Teamwork</h1>
       <a href="./index.html" class="btn btn-signout">Sign Out</a>
     </div>
     <section class="header-controls flex">
@@ -25,7 +25,7 @@
     <section class="my-articles hidden">
       <div class="write-container">
         <div class="write-article flex">
-          <h4>Write and share your article</h4>
+          <p>Write and share your article</p>
           <textarea class="text-input compose-article" cols="30" rows="10"></textarea>
           <div class="choose-category flex">
             <p>Category:</p>
@@ -580,7 +580,7 @@
     <section class="other-articles flex">
       <div class="explore-container flex">
         <div class="search-article flex">
-          <h4>Search a specific article</h4>
+          <p>Search a specific article</p>
           <input type="search" class="text-input">
           <button class="action-btn btn-search">Search</button>
         </div>
