--- a/UI/html/home.html
+++ b/UI/html/home.html
@@ -12,8 +12,8 @@
 <body>
   <header class="home-header flex">
     <div class="header-top flex">
-      <h1 class="header__title">Teamwork</h1>
-      <div class="header-top-btns">
+      <h1 class="header__title title">Teamwork</h1>
+      <div class="header-top-btns flex">
         <a href="./index.html" class="btn btn-signout">Sign Out</a>
         <a href="./admin.html" class="btn btn-admin">Admin</a>
       </div>
@@ -25,9 +25,9 @@
   </header>
   <main class="home-main flex">
     <section class="my-articles hidden">
-      <div class="write-container container-main">
+      <div class="write-container">
         <div class="write-article flex">
-          <h4>Write and share your article</h4>
+          <p>Write and share your article</p>
           <textarea class="text-input compose-article" cols="30" rows="10"></textarea>
           <div class="choose-category flex">
             <p>Category:</p>
@@ -45,7 +45,7 @@
           </div>
         </div>
       </div>
-      <div class="my-articles-container container-main flex">
+      <div class="my-articles-container flex">
         <section class="articles flex">
           <h2 class="articles-title">My articles:</h2>
           <article class="article flex">
@@ -580,9 +580,9 @@
       </div>
     </section>
     <section class="other-articles flex">
-      <div class="explore-container container-main flex">
+      <div class="explore-container flex">
         <div class="search-article flex">
-          <h4>Search a specific article</h4>
+          <p>Search a specific article</p>
           <input type="search" class="text-input">
           <button class="action-btn btn-search">Search</button>
         </div>
@@ -592,7 +592,7 @@
           <button class="action-btn btn-search">Search</button>
         </div>
       </div>
-      <div class="latest-articles-container container-main flex">
+      <div class="latest-articles-container flex">
         <section class="articles flex">
           <h2 class="articles-title">Latest Articles:</h2>
           <article class="article flex">
