--- a/UI/html/index.html
+++ b/UI/html/index.html
@@ -11,7 +11,7 @@
   <header class="landing-header"></header>
   <main class="landing-main flex">
     <section class="intro flex">
-      <h1 class="intro--title">Teamwork</h1>
+      <h1 class="intro--title title">Teamwork</h1>
       <p class="intro--body">
         Teamwork is an ​ internal social network for organization's employees.
         The goal of this application is to facilitate more interaction
