--- a/UI/html/register.html
+++ b/UI/html/register.html
@@ -17,7 +17,7 @@
       </div>
       <div class="register--signup flex ">
         <div class="signup-container flex">
-          <h3 class="create-account">Create Teamwork Account</h3>
+          <h3 class="create-account title">Create a Teamwork Account</h3>
           <form action="./home.html" class="form">
             <div class="flex form-element email-container">
               <p>Email:</p>
@@ -36,7 +36,7 @@
               <input type="password" class="form--input" placeholder="Re-type Password" required>
             </div>
             <div class="action-btns flex">
-              <button class="form-btn btn-cancel" type="reset">Cancel</button>
+              <a href="./index.html" class="form-btn btn-cancel" type="reset">Cancel</a>
               <button class="form-btn btn-submit" type="submit">Sign Up</button>
             </div>
           </form>
@@ -44,7 +44,7 @@
       </div>
       <div class="register--signin hidden">
         <div class="signin-container flex">
-          <h3 class="account-signin">Sign In to your Teamwork Account</h3>
+          <h3 class="account-signin title">Sign In to your Teamwork Account</h3>
           <form action="./home.html" class="form">
             <div class="flex form-element email-container">
               <p>Email:</p>
@@ -55,7 +55,7 @@
               <input type="password" class="form--input" placeholder="Password" required>
             </div>
             <div class="action-btns flex">
-              <button class="form-btn btn-cancel" type="reset">Cancel</button>
+              <a href="./index.html" class="form-btn btn-cancel" type="reset">Cancel</a>
               <button class="form-btn btn-submit" type="submit">Sign In</button>
             </div>
           </form>
