ch(folders): re-arrange folder structure
- changed folder strucrture to match the required structure
- changed UI/script to be UI/js
- modified all dependent script links to use new UI/js folder

[finishes #168720622]

--- a/UI/html/admin.html
+++ b/UI/html/admin.html
@@ -1246,7 +1246,7 @@
   <footer class="footer-home">
     &copy; Teamwork 2019
   </footer>
-  <script src="../script/admin.js"></script>
+  <script src="../js/admin.js"></script>
 </body>
 
 </html>
