--- a/UI/html/home.html
+++ b/UI/html/home.html
@@ -977,7 +977,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem possimus lab
   <footer class="footer-home">
     &copy; Teamwork 2019
   </footer>
-  <script src="../script/home.js"></script>
+  <script src="../js/home.js"></script>
 </body>
 
 </html>
