--- a/UI/html/register.html
+++ b/UI/html/register.html
@@ -66,7 +66,7 @@
     </section>
   </main>
   <footer></footer>
-  <script src="../script/register.js"></script>
+  <script src="../js/register.js"></script>
 </body>
 
 </html>
