--- a/UI/html/index.html
+++ b/UI/html/index.html
@@ -12,6 +12,7 @@
     <header class="landing-header"></header>
     <main class="landing-main flex">
       <section class="intro flex">
+        <img src="../images/team.png" alt="logo" width="100" height="100" />
         <h1 class="intro--title title">Teamwork</h1>
         <p class="intro--body">
           Teamwork is an ​ internal social network for organization's employees.
@@ -20,7 +21,7 @@
         </p>
       </section>
       <section class="register flex">
-        <a href="./register.html" class="register--link">REGISTER</a>
+        <a href="./register.html" class="register--link">GET STARTED</a>
       </section>
     </main>
     <footer class="landing-footer flex">
