bg(tests): fix travis failing tests
[Finishes #169059406]

--- a/UI/html/article.html
+++ b/UI/html/article.html
@@ -89,6 +89,159 @@
             consectetur adipisicing elit. Recusandae, vitae doloremque officiis
             enim quasi magni, modi, quo quaerat fuga expedita saepe asperiores
             cumque nobis exercitationem perferendis vero atque distinctio eum.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae
+            ullam nostrum quo, quaerat illum, aspernatur nihil, soluta id saepe
+            eum dicta sit nulla rem cumque quas repellat velit consequuntur
+            expedita! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Quas vitae laboriosam perspiciatis vero rerum aperiam corrupti
+            cupiditate dolore deserunt omnis quaerat debitis in quasi accusamus,
+            at, ullam dolorem fugit eveniet! Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Illo atque provident facere quam
+            dolore quisquam cum saepe natus magnam earum ratione est quos at
+            aliquid, esse neque dignissimos, odio culpa. Lorem ipsum dolor sit,
+            amet consectetur adipisicing elit. Sed quibusdam dignissimos
+            corporis quasi ut, dolorem accusamus perferendis architecto
+            distinctio repellendus deleniti autem officia quod a dolorum.
+            Aspernatur nemo reiciendis minima? Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Recusandae, vitae doloremque officiis
+            enim quasi magni, modi, quo quaerat fuga expedita saepe asperiores
+            cumque nobis exercitationem perferendis vero atque distinctio eum.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae
+            ullam nostrum quo, quaerat illum, aspernatur nihil, soluta id saepe
+            eum dicta sit nulla rem cumque quas repellat velit consequuntur
+            expedita! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Quas vitae laboriosam perspiciatis vero rerum aperiam corrupti
+            cupiditate dolore deserunt omnis quaerat debitis in quasi accusamus,
+            at, ullam dolorem fugit eveniet! Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Illo atque provident facere quam
+            dolore quisquam cum saepe natus magnam earum ratione est quos at
+            aliquid, esse neque dignissimos, odio culpa. Lorem ipsum dolor sit,
+            amet consectetur adipisicing elit. Sed quibusdam dignissimos
+            corporis quasi ut, dolorem accusamus perferendis architecto
+            distinctio repellendus deleniti autem officia quod a dolorum.
+            Aspernatur nemo reiciendis minima? Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Recusandae, vitae doloremque officiis
+            enim quasi magni, modi, quo quaerat fuga expedita saepe asperiores
+            cumque nobis exercitationem perferendis vero atque distinctio eum.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae
+            ullam nostrum quo, quaerat illum, aspernatur nihil, soluta id saepe
+            eum dicta sit nulla rem cumque quas repellat velit consequuntur
+            expedita! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Quas vitae laboriosam perspiciatis vero rerum aperiam corrupti
+            cupiditate dolore deserunt omnis quaerat debitis in quasi accusamus,
+            at, ullam dolorem fugit eveniet! Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Illo atque provident facere quam
+            dolore quisquam cum saepe natus magnam earum ratione est quos at
+            aliquid, esse neque dignissimos, odio culpa. Lorem ipsum dolor sit,
+            amet consectetur adipisicing elit. Sed quibusdam dignissimos
+            corporis quasi ut, dolorem accusamus perferendis architecto
+            distinctio repellendus deleniti autem officia quod a dolorum.
+            Aspernatur nemo reiciendis minima? Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Recusandae, vitae doloremque officiis
+            enim quasi magni, modi, quo quaerat fuga expedita saepe asperiores
+            cumque nobis exercitationem perferendis vero atque distinctio eum.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae
+            ullam nostrum quo, quaerat illum, aspernatur nihil, soluta id saepe
+            eum dicta sit nulla rem cumque quas repellat velit consequuntur
+            expedita! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Quas vitae laboriosam perspiciatis vero rerum aperiam corrupti
+            cupiditate dolore deserunt omnis quaerat debitis in quasi accusamus,
+            at, ullam dolorem fugit eveniet! Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Illo atque provident facere quam
+            dolore quisquam cum saepe natus magnam earum ratione est quos at
+            aliquid, esse neque dignissimos, odio culpa. Lorem ipsum dolor sit,
+            amet consectetur adipisicing elit. Sed quibusdam dignissimos
+            corporis quasi ut, dolorem accusamus perferendis architecto
+            distinctio repellendus deleniti autem officia quod a dolorum.
+            Aspernatur nemo reiciendis minima? Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Recusandae, vitae doloremque officiis
+            enim quasi magni, modi, quo quaerat fuga expedita saepe asperiores
+            cumque nobis exercitationem perferendis vero atque distinctio eum.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae
+            ullam nostrum quo, quaerat illum, aspernatur nihil, soluta id saepe
+            eum dicta sit nulla rem cumque quas repellat velit consequuntur
+            expedita! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Quas vitae laboriosam perspiciatis vero rerum aperiam corrupti
+            cupiditate dolore deserunt omnis quaerat debitis in quasi accusamus,
+            at, ullam dolorem fugit eveniet! Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Illo atque provident facere quam
+            dolore quisquam cum saepe natus magnam earum ratione est quos at
+            aliquid, esse neque dignissimos, odio culpa. Lorem ipsum dolor sit,
+            amet consectetur adipisicing elit. Sed quibusdam dignissimos
+            corporis quasi ut, dolorem accusamus perferendis architecto
+            distinctio repellendus deleniti autem officia quod a dolorum.
+            Aspernatur nemo reiciendis minima? Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Recusandae, vitae doloremque officiis
+            enim quasi magni, modi, quo quaerat fuga expedita saepe asperiores
+            cumque nobis exercitationem perferendis vero atque distinctio eum.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae
+            ullam nostrum quo, quaerat illum, aspernatur nihil, soluta id saepe
+            eum dicta sit nulla rem cumque quas repellat velit consequuntur
+            expedita! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Quas vitae laboriosam perspiciatis vero rerum aperiam corrupti
+            cupiditate dolore deserunt omnis quaerat debitis in quasi accusamus,
+            at, ullam dolorem fugit eveniet! Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Illo atque provident facere quam
+            dolore quisquam cum saepe natus magnam earum ratione est quos at
+            aliquid, esse neque dignissimos, odio culpa. Lorem ipsum dolor sit,
+            amet consectetur adipisicing elit. Sed quibusdam dignissimos
+            corporis quasi ut, dolorem accusamus perferendis architecto
+            distinctio repellendus deleniti autem officia quod a dolorum.
+            Aspernatur nemo reiciendis minima? Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Recusandae, vitae doloremque officiis
+            enim quasi magni, modi, quo quaerat fuga expedita saepe asperiores
+            cumque nobis exercitationem perferendis vero atque distinctio eum.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae
+            ullam nostrum quo, quaerat illum, aspernatur nihil, soluta id saepe
+            eum dicta sit nulla rem cumque quas repellat velit consequuntur
+            expedita! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Quas vitae laboriosam perspiciatis vero rerum aperiam corrupti
+            cupiditate dolore deserunt omnis quaerat debitis in quasi accusamus,
+            at, ullam dolorem fugit eveniet! Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Illo atque provident facere quam
+            dolore quisquam cum saepe natus magnam earum ratione est quos at
+            aliquid, esse neque dignissimos, odio culpa. Lorem ipsum dolor sit,
+            amet consectetur adipisicing elit. Sed quibusdam dignissimos
+            corporis quasi ut, dolorem accusamus perferendis architecto
+            distinctio repellendus deleniti autem officia quod a dolorum.
+            Aspernatur nemo reiciendis minima? Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Recusandae, vitae doloremque officiis
+            enim quasi magni, modi, quo quaerat fuga expedita saepe asperiores
+            cumque nobis exercitationem perferendis vero atque distinctio eum.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae
+            ullam nostrum quo, quaerat illum, aspernatur nihil, soluta id saepe
+            eum dicta sit nulla rem cumque quas repellat velit consequuntur
+            expedita! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Quas vitae laboriosam perspiciatis vero rerum aperiam corrupti
+            cupiditate dolore deserunt omnis quaerat debitis in quasi accusamus,
+            at, ullam dolorem fugit eveniet! Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Illo atque provident facere quam
+            dolore quisquam cum saepe natus magnam earum ratione est quos at
+            aliquid, esse neque dignissimos, odio culpa. Lorem ipsum dolor sit,
+            amet consectetur adipisicing elit. Sed quibusdam dignissimos
+            corporis quasi ut, dolorem accusamus perferendis architecto
+            distinctio repellendus deleniti autem officia quod a dolorum.
+            Aspernatur nemo reiciendis minima? Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Recusandae, vitae doloremque officiis
+            enim quasi magni, modi, quo quaerat fuga expedita saepe asperiores
+            cumque nobis exercitationem perferendis vero atque distinctio eum.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae
+            ullam nostrum quo, quaerat illum, aspernatur nihil, soluta id saepe
+            eum dicta sit nulla rem cumque quas repellat velit consequuntur
+            expedita! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Quas vitae laboriosam perspiciatis vero rerum aperiam corrupti
+            cupiditate dolore deserunt omnis quaerat debitis in quasi accusamus,
+            at, ullam dolorem fugit eveniet! Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Illo atque provident facere quam
+            dolore quisquam cum saepe natus magnam earum ratione est quos at
+            aliquid, esse neque dignissimos, odio culpa. Lorem ipsum dolor sit,
+            amet consectetur adipisicing elit. Sed quibusdam dignissimos
+            corporis quasi ut, dolorem accusamus perferendis architecto
+            distinctio repellendus deleniti autem officia quod a dolorum.
+            Aspernatur nemo reiciendis minima? Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Recusandae, vitae doloremque officiis
+            enim quasi magni, modi, quo quaerat fuga expedita saepe asperiores
+            cumque nobis exercitationem perferendis vero atque distinctio eum.
           </p>
           <div class="article-controls flex">
             <figure
