bg(UI): fix UI components
- fix the write article input box

[Finishes #169111567]

--- a/UI/html/home.html
+++ b/UI/html/home.html
@@ -1160,7 +1160,7 @@
       <div class="modal-contents">
         <div class="modal-edit hidden">
           <div class="modal-content">
-            <textarea cols="80" rows="12" class="text-input">
+            <textarea cols="80" rows="12" class="text-input modal-update">
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem possimus labore modi aspernatur porro magnam! Similique ducimus exercitationem odio iure aliquam quas beatae, incidunt itaque, accusantium tempore, in numquam qui.
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem possimus labore modi aspernatur porro magnam! Similique ducimus exercitationem odio iure aliquam quas beatae, incidunt itaque, accusantium tempore, in numquam qui.
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem possimus labore modi aspernatur porro magnam! Similique ducimus exercitationem odio iure aliquam quas beatae, incidunt itaque, accusantium tempore, in numquam qui.
