--- a/UI/html/home.html
+++ b/UI/html/home.html
@@ -535,7 +535,7 @@
       <div class="explore-container flex">
         <div class="search-article flex">
           <p>Search a specific article</p>
-          <input type="search" class="text-input">
+          <input type="search" class="text-input search-article-input">
           <button class="action-btn btn-search">Search</button>
         </div>
         <div class="category-container flex">
@@ -1021,8 +1021,6 @@
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae ullam nostrum quo, quaerat illum,
                 aspernatur nihil, soluta id saepe eum dicta sit nulla rem cumque quas repellat velit consequuntur
                 expedita!
-                
-                
               </p>
               <div class="article-controls flex">
                 <a href="./article.html" class="read-more">Read More</a>
@@ -1162,7 +1160,7 @@
       <div class="modal-contents">
         <div class="modal-edit hidden">
           <div class="modal-content">
-            <textarea cols="80" rows="12" class="text-input">
+            <textarea cols="80" rows="12" class="text-input modal-update">
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem possimus labore modi aspernatur porro magnam! Similique ducimus exercitationem odio iure aliquam quas beatae, incidunt itaque, accusantium tempore, in numquam qui.
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem possimus labore modi aspernatur porro magnam! Similique ducimus exercitationem odio iure aliquam quas beatae, incidunt itaque, accusantium tempore, in numquam qui.
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem possimus labore modi aspernatur porro magnam! Similique ducimus exercitationem odio iure aliquam quas beatae, incidunt itaque, accusantium tempore, in numquam qui.
