--- a/UI/html/admin.html
+++ b/UI/html/admin.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Admin</title>
   <link rel="stylesheet" href="../css/home.css">
+  <link rel="stylesheet" href="../css/all.css">
 </head>
 
 <body>
