--- a/UI/html/article.html
+++ b/UI/html/article.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Article</title>
     <link rel="stylesheet" href="../css/article.css" />
-  </head>
+  <link rel="stylesheet" href="../css/all.css">
+</head>
   <body>
     <header class="home-header flex">
       <div class="header-top flex">
