--- a/UI/html/index.html
+++ b/UI/html/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Teamwork</title>
     <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/all.css" />
   </head>
 
   <body>
