--- a/UI/html/register.html
+++ b/UI/html/register.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Register</title>
     <link rel="stylesheet" href="../css/register.css" />
-  </head>
+  <link rel="stylesheet" href="../css/all.css">
+</head>
 
   <body>
     <header></header>
